# MyChessGames

./: .gitignore  Questions.md  README.md  chess_analysis.ipynb  chess_data_export_template.ipynb  environment.yml  pixi.toml  pyproject.toml  requirements.txt
